# prop-logic

./: .flake8  .pre-commit-config.yaml  README.md  grammar.ebnf  pyproject.toml
prop_logic/: connectives.py  lexer.py  nodes.py  parser.py
tests/: test_parser.py
