[tool.poetry]
name = "prop_logic"
version = "0.1.0"
description = "A lexer and parser for propositional formulas in propositional logic."
authors = ["m_k"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
more-itertools = "~8.6"

[tool.poetry.dev-dependencies]
flake8 = "~3.8.4"
flake8-annotations = "~2.4.1"
flake8-docstrings = "~1.5"
flake8-import-order = "~0.18.1"
flake8-quotes = "~3.2"
flake8-string-format = "~0.3.0"
flake8-tidy-imports = "~4.1"
pre-commit = "~2.9.2"
pytest = "~6.2"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --import-mode=importlib"
testpaths = ["tests"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
