[tool.poetry]
name = "prop_logic"
version = "0.1.0"
description = "A lexer and parser for propositional formulas in propositional logic."
authors = ["m_k"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
more-itertools = "~8.6"

[tool.poetry.dev-dependencies]
pre-commit = "~2.17.0"
pytest = "~6.2"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
line_length = 100
profile = "black"
skip_gitignore = true
src_paths = ["prop_logic"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --import-mode=importlib"
testpaths = ["tests"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
